[fix] openapi response fix
